fixed dark mode

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -116,6 +116,17 @@ body {
 	list-style: none;
 }
 
+.form-control {
+	border-radius: 5px;
+	border: 1px solid #ced4da;
+	padding: 10px;
+	font-size: 1rem;
+}
+
+.form-control.dark-mode {
+	background-color: #343a40;
+}
+
 body.dark-mode {
 	background-color: #181818 !important;
 	color: #e0e0e0;
